test/scc/ext/tm/semantic-errors/014.t
void test()
{
    struct
    {
        volatile int a;
    } *b;
    _Atomic
        b->a;
}